--- a/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
@@ -16,7 +16,7 @@
         <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">32</sys:Double>
     </UserControl.Resources>
 
-    <GroupBox Grid.Column="0" Header="Settings" Style="{StaticResource RxGroupBox}">
+    <GroupBox Grid.Column="0" Header="Substrate Settings" Style="{StaticResource RxGroupBox}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -45,8 +45,8 @@
                 </Grid>
                 <rx_uc:PlcParCtrl ID="XML_MATERIAL"  Label="" x:Name="XML_MATERIAL" Visibility="Collapsed"/>
 
-                <rx_uc:PlcParCtrl ID="XML_MATERIAL_THICKNESS" Label="Thickness"    Unit="µm" UnitWidth="50" Format="n"/>
                 <rx_uc:PlcParCtrl ID="XML_HEAD_HEIGHT"        Label="Print Height" Unit="mm" UnitWidth="50" Format="1"/>
+                <rx_uc:PlcParCtrl ID="XML_MATERIAL_THICKNESS" Label="Thickness"    Unit="µm" UnitWidth="50" Format="n"/>
                 <rx_uc:PlcParCtrl ID="XML_ENC_OFFSET"         Label="Encoder Adj"  Unit="inc" UnitWidth="50" Format="n"/>
             </rx_uc:PlcParPanel>
             
