--- a/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
@@ -84,6 +84,13 @@
                     <TextBlock Text="ô" FontFamily="Wingdings" FontSize="{StaticResource FontSizeXL}"/>
                 </common:RxButton>
             </Grid>
+
+            <Grid HorizontalAlignment="Right">
+                <TextBox x:Name="Change" Visibility="Hidden"/>
+                <common:RxButton Click="Change_Clicked">
+                    <TextBlock Text="a" FontFamily="Wingdings" FontSize="{StaticResource FontSizeXL}"/>
+                </common:RxButton>
+            </Grid>
         </StackPanel>
     </Grid>
 </UserControl>
