--- a/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Preview.xaml
@@ -91,7 +91,7 @@
             <Grid HorizontalAlignment="Right">
                 <TextBox x:Name="Change" Visibility="Hidden"/>
                 <common:RxButton Click="Change_Clicked">
-                    <TextBlock Text="a" FontFamily="Wingdings" FontSize="{StaticResource FontSizeXL}"/>
+                    <TextBlock Text="CHG" FontSize="{StaticResource FontSizeXL}"/>
                 </common:RxButton>
             </Grid>
         </StackPanel>
