--- a/rx_digiprint_gui/Views/UserControls/CleaningView.xaml
+++ b/rx_digiprint_gui/Views/UserControls/CleaningView.xaml
@@ -12,8 +12,8 @@
         <GroupBox x:Name="CapGroup" Header="Cleaning" Style="{StaticResource RxGroupBox}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="0"/>
-                    <RowDefinition Height="0"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -74,7 +74,7 @@
                     <TextBlock Text="mm" Margin="5,0"/>
                 </StackPanel>
 
-                <TextBlock Grid.Column="1" Text="{Binding PosZ}" VerticalAlignment="Top" FontSize="{StaticResource FontSizeStd}" Margin="0,-18"/>
+                <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding PosZ}" VerticalAlignment="Center" FontSize="{StaticResource FontSizeStd}"/>
                 <Image  Grid.Row="3" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding Z_in_ref,   Converter={StaticResource BoolToVisible_Converter}}" HorizontalAlignment="Left"/>
                 <Image  Grid.Row="4" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding Z_in_print, Converter={StaticResource BoolToVisible_Converter}}" HorizontalAlignment="Left"/>
                 <Image  Grid.Row="5" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding Z_in_cap,   Converter={StaticResource BoolToVisible_Converter}}" HorizontalAlignment="Left"/>
