--- a/rx_digiprint_gui/Views/PrintQueueView/FileSettingsTest.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/FileSettingsTest.xaml
@@ -66,7 +66,7 @@
             ValuePath="Value" 
             DropDownResizeMode="None"
             />
-            <TextBlock Grid.Row="2" Grid.Column="3" Text="m/min"  Margin="5,0,0,0"/>
+            <TextBlock Grid.Row="2" Grid.Column="3" Text="m/min"  Margin="5,0,0,0"  x:Name="SpeedUnit"/>
             
             <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Scan Mode" x:Name="CT_ScanMode"/>
             <igWPF:XamComboEditor Grid.Row="3" Grid.Column="2"
@@ -79,8 +79,8 @@
                 />
 
             <TextBlock   Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Image Margin"/>
-            <common:RxNumBox Grid.Row="4" Grid.Column="2" Text="{Binding PageMargin}" HorizontalAlignment="Stretch" />
-            <TextBlock   Grid.Row="4" Grid.Column="3" Text="mm" Margin="5,0,0,0" />
+            <common:RxNumBox Grid.Row="4" Grid.Column="2" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" />
+            <TextBlock   Grid.Row="4" Grid.Column="3" Text="mm" Margin="5,0,0,0" x:Name="MarginUnit"/>
 
             <TextBlock   Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Copies"/>
             <common:RxNumBox Grid.Row="5" Grid.Column="2" Text="{Binding Copies}" HorizontalAlignment="Stretch" />
