--- a/rx_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
+++ b/rx_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
@@ -8,7 +8,8 @@
              xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
              xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             DataContextChanged="UserControl_DataContextChanged">
 
     <Grid Margin="2,0" MinWidth="100" x:Name="Grid">
         <Grid.RowDefinitions>
