mag_8710 code: GUI: several improvements LH702: JobChange with encoder in markreading mode LH702: Virtual PG_MODE_MARK_VRT Stepper: smaller changes (prepare for merge)

--- a/rx_digiprint_gui/Views/LogView.xaml
+++ b/rx_digiprint_gui/Views/LogView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:igGrids="http://infragistics.com/DataPresenter"
              xmlns:ig="http://schemas.infragistics.com/xaml"
              xmlns:Infragistics="clr-namespace:Infragistics;assembly=InfragisticsWPF4.Controls.Grids.XamGrid.v13.2" 
@@ -18,6 +19,7 @@
             >
     
     <UserControl.Resources>
+        <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">32</sys:Double>
     </UserControl.Resources>
 
     <Grid>
