--- a/rx_digiprint_gui/Views/UserControls/RxDirTree.xaml
+++ b/rx_digiprint_gui/Views/UserControls/RxDirTree.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"            
              d:DesignHeight="300" d:DesignWidth="300"
              >
@@ -11,6 +12,8 @@
         <ItemsPanelTemplate x:Key="ItemsPanelTemplate1">
             <StackPanel IsItemsHost="True" Margin="0,0,5,0"/>
         </ItemsPanelTemplate>
+
+        <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">32</sys:Double>
 
         <!--Control colors.-->
 
