mag_8757 code: GUI: stepper input for robot (purging)

--- a/rx_digiprint_gui/Views/PrintSystemView/StepperGridLB702.xaml
+++ b/rx_digiprint_gui/Views/PrintSystemView/StepperGridLB702.xaml
@@ -16,8 +16,8 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto" x:Name="WipingDelay_Height"/>
+                <RowDefinition Height="auto" x:Name="WipingSpeed_Height"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>           
                 <ColumnDefinition Width="160"/>
